reading multiple yaml docs from a single file using safe_load_all

--- a/dev/dev1.ipynb
+++ b/dev/dev1.ipynb
@@ -2,26 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\ML\\\\Seen Finance Data Engineer Test\\\\examples\\\\dev'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import yaml"
+    "import yaml\n",
+    "import os\n",
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sample1.yaml','r') as file:\n",
+    "with open(\"../config/sample1.yaml\",'r') as file:\n",
     "    data = yaml.safe_load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open(\"../config/sample3.yaml\",'r') as file:\n",
+    "#    for doc in yaml.safe_load_all(file):\n",
+    "#       print(doc)\n",
+    "#       print('*' * 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('sample1.yaml','r') as file:\n",
+    "#     data = yaml.safe_load(file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +80,7 @@
        "   'roles': ['editor']}]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +100,7 @@
        "dict"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +122,7 @@
        " 'roles': ['admin', 'editor']}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +142,7 @@
        "{'username': 'jane_smith', 'email': 'jane@example.com', 'roles': ['editor']}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -147,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('sample2.yaml','r') as file:\n",
+    "with open('../config/sample2.yaml','r') as file:\n",
     "    data = yaml.safe_load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +274,7 @@
        "  {'username': 'bob_manager', 'email': 'bob@myapp.com', 'roles': ['manager']}]}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +294,7 @@
        "'MyApp'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +314,7 @@
        "'2.3.1'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +334,7 @@
        "'This is a multi-service web application with authentication, \\ncaching, and various environment-specific configurations.\\n'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +354,7 @@
        "'www.myapp.com'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +374,7 @@
        "'api.myapp.com'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +394,7 @@
        "'localhost'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +414,7 @@
        "'development'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +434,7 @@
        "'testing'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +454,7 @@
        "'production'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +483,7 @@
        "  'key_path': '/etc/ssl/myapp_key.pem'}}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +503,7 @@
        "'localhost'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +523,7 @@
        "8000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +543,7 @@
        "False"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +563,7 @@
        "2"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +583,7 @@
        "'0.0.0.0'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +603,7 @@
        "443"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +623,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +643,7 @@
        "8"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +663,7 @@
        "'/etc/ssl/myapp_cert.pem'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +683,7 @@
        "'/etc/ssl/myapp_key.pem'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +721,7 @@
        "  'name': 'myapp_prod_db'}}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +745,7 @@
        " 'options': {'sslmode': 'require', 'timeout': '30s'}}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +771,7 @@
        " 'name': 'myapp_dev_db'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +797,7 @@
        " 'name': 'myapp_prod_db'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +824,7 @@
        "   'client_secret': 'facebook-client-secret'}}}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +853,7 @@
        " 'root': {'level': 'INFO', 'handlers': ['console', 'file']}}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,13 +861,6 @@
    "source": [
     "data['logging']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
