dumping yaml files to disk

--- a/dev/dev1.ipynb
+++ b/dev/dev1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'d:\\\\ML\\\\Seen Finance Data Engineer Test\\\\examples\\\\dev'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,6 +860,99 @@
    ],
    "source": [
     "data['logging']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dumping YAML files\n",
+    "\n",
+    "safe_dump\n",
+    "\n",
+    "dump\n",
+    "\n",
+    "dump_all\n",
+    "\n",
+    "safe_dump_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yaml_str = yaml.dump(data,default_flow_style = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'app:\\n  debug: true\\n  name: MyApp\\n  version: 1.0.0\\ndatabase:\\n  host: localhost\\n  name: myapp_db\\n  password: secret\\n  port: 5432\\n  type: postgresql\\n  username: admin\\nfeatures:\\n  enable_notifications: false\\n  enable_signup: true\\nlogging:\\n  file: /var/log/myapp.log\\n  level: INFO\\nserver:\\n  host: 127.0.0.1\\n  port: 8080\\n  ssl: false\\nusers:\\n- email: john@example.com\\n  roles:\\n  - admin\\n  - editor\\n  username: john_doe\\n- email: jane@example.com\\n  roles:\\n  - editor\\n  username: jane_smith\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaml_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('dump_sample_1.yaml','w') as file:\n",
+    "    file.write(yaml_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yaml_str_new = yaml.dump_all([data,data],default_flow_style=False,allow_unicode=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'app:\\n  debug: true\\n  name: MyApp\\n  version: 1.0.0\\ndatabase:\\n  host: localhost\\n  name: myapp_db\\n  password: secret\\n  port: 5432\\n  type: postgresql\\n  username: admin\\nfeatures:\\n  enable_notifications: false\\n  enable_signup: true\\nlogging:\\n  file: /var/log/myapp.log\\n  level: INFO\\nserver:\\n  host: 127.0.0.1\\n  port: 8080\\n  ssl: false\\nusers:\\n- email: john@example.com\\n  roles:\\n  - admin\\n  - editor\\n  username: john_doe\\n- email: jane@example.com\\n  roles:\\n  - editor\\n  username: jane_smith\\n---\\napp:\\n  debug: true\\n  name: MyApp\\n  version: 1.0.0\\ndatabase:\\n  host: localhost\\n  name: myapp_db\\n  password: secret\\n  port: 5432\\n  type: postgresql\\n  username: admin\\nfeatures:\\n  enable_notifications: false\\n  enable_signup: true\\nlogging:\\n  file: /var/log/myapp.log\\n  level: INFO\\nserver:\\n  host: 127.0.0.1\\n  port: 8080\\n  ssl: false\\nusers:\\n- email: john@example.com\\n  roles:\\n  - admin\\n  - editor\\n  username: john_doe\\n- email: jane@example.com\\n  roles:\\n  - editor\\n  username: jane_smith\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaml_str_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('dump_sample_2.yaml','w') as file:\n",
+    "    file.write(yaml_str_new)"
    ]
   }
  ],
